# quadvec

./: Cargo.toml  README.md  build.rs  quadvec.desktop  todo.txt
src/: app_settings.rs  main.rs
src/drawing/: lyon_ops.rs  mod.rs
src/drawing/styles/: arrow_style.rs  brush_style.rs  circle_style.rs  curve_style.rs  ellipse_style.rs  line_style.rs  mod.rs  poly_style.rs  rectangle_style.rs
src/ui/: draw_settings.rs  mod.rs  quit_ui.rs  style_settings.rs  ui.rs
