[package]
name = "QuadVec"
version = "1.1.0"
edition = "2024"
repository = "https://github.com/HasChad/QuadVec"

[dependencies]
macroquad = { version = "0.4.14", default-features = false }
egui-macroquad = "0.17.3"
lyon = "1.0.16"

[build-dependencies]
winresource = "0.1.31"

[package.metadata.appimage]
# assets = [""]
icon = "icons/icon_full.png"
desktop_entry = "quadvec.desktop"
